changing git ignore for node modules

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ bin-release/
 *.ipa
 *.apk
 
+# Dependency directories
+node_modules/
+jspm_packages/
+
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
